--- a/src/app/tests/suites/certification/Test_TC_WNCV_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_WNCV_2_1.yaml
@@ -31,6 +31,7 @@ tests:
                 value: nodeId
 
     ### MANDATORY Attributes
+    ### 1 MANDATORY Attributes
     ### Attribute[  0]: Type  =======================================
     - label: "2: read the RO mandatory attribute default: Type"
       command: "readAttribute"
@@ -72,7 +73,7 @@ tests:
               maxValue: 23
 
     ### Attribute[ 23]: Mode ========================================
-    - label: "2: read the RW mandatory attribute default: Mode"
+    - label: "1e: read the RW mandatory attribute default: Mode"
       command: "readAttribute"
       attribute: "Mode"
       response:
@@ -81,7 +82,13 @@ tests:
               minValue: 0
               maxValue: 15
 
-    ### CONDITIONALLY MANDATORY Attributes
+    - label: "1f: write a value into the RW mandatory attribute:: Mode"
+      command: "writeAttribute"
+      attribute: "Mode"
+      arguments:
+          value: 0
+
+    ### 2 CONDITIONALLY MANDATORY Attributes
     ### Attribute[ 11]: TargetPositionLiftPercent100ths  ====================
     - label:
           "2: read the RO optional attribute default:
@@ -172,7 +179,7 @@ tests:
               minValue: 0
               maxValue: 65535
 
-    ### CONDITIONALLY and PURELY OPTIONAL Attributes
+    ### 3 CONDITIONALLY and PURELY OPTIONAL Attributes
     ### Attribute[ 26]: SafetyStatus  ==========================
     - label: "4: read the RO mandatory attribute default: SafetyStatus"
       command: "readAttribute"
