--- a/src/app/tests/suites/certification/Test_TC_WNCV_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_WNCV_2_1.yaml
@@ -36,7 +36,7 @@ tests:
     - label: "1a: read the RO mandatory attribute default: Type"
       command: "readAttribute"
       attribute: "Type"
-      PICS: PICS_A_TYPE
+      PICS: A_TYPE
       response:
           constraints:
               type: enum8
@@ -47,7 +47,7 @@ tests:
     - label: "1b: read the RO mandatory attribute default: ConfigStatus"
       command: "readAttribute"
       attribute: "ConfigStatus"
-      PICS: PICS_A_CONFIGSTATUS
+      PICS: A_CONFIGSTATUS
       response:
           constraints:
               type: map8
@@ -58,7 +58,7 @@ tests:
     - label: "1c: read the RO mandatory attribute default: OperationalStatus"
       command: "readAttribute"
       attribute: "OperationalStatus"
-      PICS: PICS_A_OPERATIONALSTATUS
+      PICS: A_OPERATIONALSTATUS
       response:
           constraints:
               type: map8
@@ -69,7 +69,7 @@ tests:
     - label: "1d: read the RO mandatory attribute default: EndProductType"
       command: "readAttribute"
       attribute: "EndProductType"
-      PICS: PICS_A_ENDPRODUCTTYPE
+      PICS: A_ENDPRODUCTTYPE
       response:
           constraints:
               type: enum8
@@ -80,7 +80,7 @@ tests:
     - label: "1e: read the RW mandatory attribute default: Mode"
       command: "readAttribute"
       attribute: "Mode"
-      PICS: PICS_A_MODE
+      PICS: A_MODE
       response:
           constraints:
               type: map8
@@ -90,7 +90,7 @@ tests:
     - label: "1f: write a value into the RW mandatory attribute:: Mode"
       command: "writeAttribute"
       attribute: "Mode"
-      PICS: PICS_A_MODE
+      PICS: A_MODE
       arguments:
           value: 0
 
@@ -101,7 +101,7 @@ tests:
           TargetPositionLiftPercent100ths"
       command: "readAttribute"
       attribute: "TargetPositionLiftPercent100ths"
-      PICS: PICS_A_TARGETPOSITIONLIFTPERCENT100THS
+      PICS: A_TARGETPOSITIONLIFTPERCENT100THS
       response:
           constraints:
               type: Percent100ths
@@ -114,7 +114,7 @@ tests:
           TargetPositionTiltPercent100ths"
       command: "readAttribute"
       attribute: "TargetPositionTiltPercent100ths"
-      PICS: PICS_A_TARGETPOSITIONTILTPERCENT100THS
+      PICS: A_TARGETPOSITIONTILTPERCENT100THS
       response:
           constraints:
               type: Percent100ths
@@ -127,7 +127,7 @@ tests:
           CurrentPositionLiftPercent100ths"
       command: "readAttribute"
       attribute: "CurrentPositionLiftPercent100ths"
-      PICS: PICS_A_CURRENTPOSITIONLIFTPERCENT100THS
+      PICS: A_CURRENTPOSITIONLIFTPERCENT100THS
       response:
           constraints:
               type: Percent100ths
@@ -140,7 +140,7 @@ tests:
           CurrentPositionTiltPercent100ths"
       command: "readAttribute"
       attribute: "CurrentPositionTiltPercent100ths"
-      PICS: PICS_A_CURRENTPOSITIONTILTPERCENT100THS
+      PICS: A_CURRENTPOSITIONTILTPERCENT100THS
       response:
           constraints:
               type: Percent100ths
@@ -151,7 +151,7 @@ tests:
     - label: "2e: read the RO optional attribute default: InstalledOpenLimitLift"
       command: "readAttribute"
       attribute: "InstalledOpenLimitLift"
-      PICS: PICS_A_INSTALLEDOPENLIMITLIFT
+      PICS: A_INSTALLEDOPENLIMITLIFT
       response:
           constraints:
               type: uint16
@@ -163,7 +163,7 @@ tests:
           "2f: read the RO optional attribute default: InstalledClosedLimitLift"
       command: "readAttribute"
       attribute: "InstalledClosedLimitLift"
-      PICS: PICS_A_INSTALLEDCLOSEDLIMITLIFT
+      PICS: A_INSTALLEDCLOSEDLIMITLIFT
       response:
           constraints:
               type: uint16
@@ -174,7 +174,7 @@ tests:
     - label: "2g: read the RO optional attribute default: InstalledOpenLimitTilt"
       command: "readAttribute"
       attribute: "InstalledOpenLimitTilt"
-      PICS: PICS_A_INSTALLEDOPENLIMITTILT
+      PICS: A_INSTALLEDOPENLIMITTILT
       response:
           constraints:
               type: uint16
@@ -186,7 +186,7 @@ tests:
           "2h: read the RO optional attribute default: InstalledClosedLimitTilt"
       command: "readAttribute"
       attribute: "InstalledClosedLimitTilt"
-      PICS: PICS_A_INSTALLEDCLOSEDLIMITTILT
+      PICS: A_INSTALLEDCLOSEDLIMITTILT
       response:
           constraints:
               type: uint16
@@ -198,19 +198,37 @@ tests:
     - label: "3a: read the RO mandatory attribute default: SafetyStatus"
       command: "readAttribute"
       attribute: "SafetyStatus"
-      PICS: PICS_A_SAFETYSTATUS
+      PICS: A_SAFETYSTATUS
       response:
           constraints:
               type: map16
               minValue: 0
               maxValue: 2047
 
+    - label: "3a.2: write a value into the RO mandatory attribute: SafetyStatus"
+      command: "writeAttribute"
+      attribute: "SafetyStatus"
+      PICS: PICS_A_SAFETYSTATUS
+      arguments:
+          value: 4096
+      response:
+          error: UNSUPPORTED_WRITE
+
+    - label: "3a.3: reads back the RO mandatory attribute: SafetyStatus"
+      command: "readAttribute"
+      attribute: "SafetyStatus"
+      PICS: PICS_A_SAFETYSTATUS
+      response:
+          constraints:
+              type: map16
+              notValue: 4096
+
     ### Attribute[  1]: PhysicalClosedLimitLift  ====================
     - label:
           "3b: read the RO optional attribute default: PhysicalClosedLimitLift"
       command: "readAttribute"
       attribute: "PhysicalClosedLimitLift"
-      PICS: PICS_A_PHYSICALCLOSEDLIMITLIFT
+      PICS: A_PHYSICALCLOSEDLIMITLIFT
       response:
           constraints:
               type: uint16
@@ -222,7 +240,7 @@ tests:
           "3c: read the RO optional attribute default: PhysicalClosedLimitTilt"
       command: "readAttribute"
       attribute: "PhysicalClosedLimitTilt"
-      PICS: PICS_A_PHYSICALCLOSEDLIMITTILT
+      PICS: A_PHYSICALCLOSEDLIMITTILT
       response:
           constraints:
               type: uint16
@@ -244,7 +262,7 @@ tests:
     - label: "3e: read the RO optional attribute default: CurrentPositionTilt"
       command: "readAttribute"
       attribute: "CurrentPositionTilt"
-      PICS: PICS_A_CURRENTPOSITIONTILT
+      PICS: A_CURRENTPOSITIONTILT
       response:
           constraints:
               type: uint16
@@ -255,7 +273,7 @@ tests:
     - label: "3f: read the RO optional attribute default: NumberOfActuationsLift"
       command: "readAttribute"
       attribute: "NumberOfActuationsLift"
-      PICS: PICS_A_NUMBEROFACTUATIONSLIFT
+      PICS: A_NUMBEROFACTUATIONSLIFT
       response:
           constraints:
               type: uint16
@@ -266,7 +284,7 @@ tests:
     - label: "3g: read the RO optional attribute default: NumberOfActuationsTilt"
       command: "readAttribute"
       attribute: "NumberOfActuationsTilt"
-      PICS: PICS_A_NUMBEROFACTUATIONSTILT
+      PICS: A_NUMBEROFACTUATIONSTILT
       response:
           constraints:
               type: uint16
@@ -278,7 +296,7 @@ tests:
           CurrentPositionLiftPercentage"
       command: "readAttribute"
       attribute: "CurrentPositionLiftPercentage"
-      PICS: PICS_A_CURRENTPOSITIONLIFTPERCENTAGE
+      PICS: A_CURRENTPOSITIONLIFTPERCENTAGE
       response:
           constraints:
               type: Percent
@@ -289,7 +307,7 @@ tests:
     - label: "3i:read the RO optional attribute default: CurrentPositionTiltPercentage"
       command: "readAttribute"
       attribute: "CurrentPositionTiltPercentage"
-      PICS: PICS_A_CURRENTPOSITIONTILTPERCENTAGE
+      PICS: A_CURRENTPOSITIONTILTPERCENTAGE
       response:
           constraints:
               type: Percent
