Bring certificate validity logic into spec compliance
* remove use of hard-coded time
* add configuration manager support for firmware build time
* implement spec-mandated Last Known Good UTC Time support
* enable certificate validity NotBefore checks
* add application-injectable certificate validity policies
* add ESP32 platform workaround for #19081

Fixes: #14202, #15584

--- a/src/credentials/BUILD.gn
+++ b/src/credentials/BUILD.gn
@@ -25,6 +25,7 @@ static_library("credentials") {
     "CHIPCert.h",
     "CHIPCertFromX509.cpp",
     "CHIPCertToX509.cpp",
+    "CHIPCertificateSet.h",
     "CertificationDeclaration.cpp",
     "CertificationDeclaration.h",
     "DeviceAttestationConstructor.cpp",
@@ -46,6 +47,8 @@ static_library("credentials") {
     "examples/ExampleDACs.h",
     "examples/ExamplePAI.cpp",
     "examples/ExamplePAI.h",
+    "examples/StrictCertificateValidityPolicyExample.h",
+    "examples/TolerantCertificateValidityPolicyExample.h",
   ]
 
   # TODO: These tests files should be removed after the DeviceAttestationCredsExample implementation
