Added updated Scripts

--- a/src/app/tests/suites/certification/Test_TC_ETHDIAG_1_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_ETHDIAG_1_1.yaml
@@ -28,14 +28,6 @@ tests:
               - name: "nodeId"
                 value: nodeId
 
-    #Disabled due to issue #16552 and #13648
-    - label: "Read PHYRate attribute"
-      disabled: true
-      command: "readAttribute"
-      attribute: "PHYRate"
-      response:
-          value: null
-
     - label: "Read PHYRate attribute constraints"
       command: "readAttribute"
       attribute: "PHYRate"
@@ -45,13 +37,6 @@ tests:
               minValue: 0
               maxValue: 9
 
-    - label: "Read FullDuplex attribute"
-      disabled: true
-      command: "readAttribute"
-      attribute: "FullDuplex"
-      response:
-          value: null
-
     - label: "Read FullDuplex attribute constraints"
       command: "readAttribute"
       attribute: "FullDuplex"
@@ -59,13 +44,7 @@ tests:
           constraints:
               type: bool
 
-    - label: "Read PacketRxCount attribute"
-      disabled: true
-      command: "readAttribute"
-      attribute: "PacketRxCount"
-      response:
-          value: 0
-
+    #issue #13648
     - label: "Read PacketRxCount attribute constraints"
       command: "readAttribute"
       attribute: "PacketRxCount"
@@ -73,12 +52,24 @@ tests:
           constraints:
               type: uint64
 
-    - label: "Read PacketTxCount attribute"
-      disabled: true
-      command: "readAttribute"
-      attribute: "PacketTxCount"
-      response:
-          value: 0
+    - label:
+          "Read PacketRxCount value from DUT and verify the number of packets
+          received on ethernet network interface"
+      verification: |
+          ./chip-tool ethernetnetworkdiagnostics read packet-rx-count 1 0
+          Verify the value of PacketRxCount is in range uint64
+
+          CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0037 Attribute 0x0000_0002 DataVersion: 3872576452
+          [1649663623.009973][8103:8108] CHIP:TOO:   PacketRxCount: 3322
+      cluster: "LogCommands"
+      command: "UserPrompt"
+      PICS: PICS_USER_PROMPT
+      arguments:
+          values:
+              - name: "message"
+                value: "Please enter 'y' for success"
+              - name: "expectedValue"
+                value: "y"
 
     - label: "Read PacketTxCount attribute constraints"
       command: "readAttribute"
@@ -87,12 +78,24 @@ tests:
           constraints:
               type: uint64
 
-    - label: "Read TxErrCount attribute"
-      disabled: true
-      command: "readAttribute"
-      attribute: "TxErrCount"
-      response:
-          value: 0
+    - label:
+          "Read PacketTxCount value from DUT and verify the number of packets
+          received on ethernet network interface"
+      verification: |
+          ./chip-tool ethernetnetworkdiagnostics read packet-tx-count 1 0
+          Verify the value of PacketTxCount is in range uint64
+
+          CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0037 Attribute 0x0000_0003 DataVersion: 3872576452
+          [1649663793.192934][8117:8122] CHIP:TOO:   PacketTxCount: 3220
+      cluster: "LogCommands"
+      command: "UserPrompt"
+      PICS: PICS_USER_PROMPT
+      arguments:
+          values:
+              - name: "message"
+                value: "Please enter 'y' for success"
+              - name: "expectedValue"
+                value: "y"
 
     - label: "Read TxErrCount attribute constraints"
       command: "readAttribute"
@@ -101,12 +104,24 @@ tests:
           constraints:
               type: uint64
 
-    - label: "Read CollisionCount attribute"
-      disabled: true
-      command: "readAttribute"
-      attribute: "CollisionCount"
-      response:
-          value: 0
+    - label:
+          "Read TxErrCount value from DUT and verify value indicates the number
+          of failed packet transmission on ethernet network interface"
+      verification: |
+          ./chip-tool ethernetnetworkdiagnostics read tx-err-count 1 1
+          Verify the value of TxErrCount is in range uint64
+
+          CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0037 Attribute 0x0000_0004 DataVersion: 3872576452
+          [1649663843.295395][8123:8128] CHIP:TOO:   TxErrCount: 0
+      cluster: "LogCommands"
+      command: "UserPrompt"
+      PICS: PICS_USER_PROMPT
+      arguments:
+          values:
+              - name: "message"
+                value: "Please enter 'y' for success"
+              - name: "expectedValue"
+                value: "y"
 
     - label: "Read CollisionCount attribute constraints"
       command: "readAttribute"
@@ -115,12 +130,25 @@ tests:
           constraints:
               type: uint64
 
-    - label: "Read OverrunCount attribute"
-      disabled: true
-      command: "readAttribute"
-      attribute: "OverrunCount"
-      response:
-          value: 0
+    - label:
+          "Read CollisionCount value from DUT and verify value indicates the
+          number of collision occurred while transmitting packets on ethernet
+          network interface"
+      verification: |
+          ./chip-tool ethernetnetworkdiagnostics read collision-count 1 1
+          Verify the value of  CollisionCount is in range uint64
+
+          CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0037 Attribute 0x0000_0005 DataVersion: 3872576452
+          [1649663870.221742][8133:8138] CHIP:TOO:   CollisionCount: 0
+      cluster: "LogCommands"
+      command: "UserPrompt"
+      PICS: PICS_USER_PROMPT
+      arguments:
+          values:
+              - name: "message"
+                value: "Please enter 'y' for success"
+              - name: "expectedValue"
+                value: "y"
 
     - label: "Read OverrunCount attribute constraints"
       command: "readAttribute"
@@ -129,12 +157,24 @@ tests:
           constraints:
               type: uint64
 
-    - label: "Read CarrierDetect attribute"
-      disabled: true
-      command: "readAttribute"
-      attribute: "CarrierDetect"
-      response:
-          value: null
+    - label:
+          "Read OverrunCount value from DUT and verify value indicates the
+          number of packets dropped due to lack of buffer memory on ethernet
+          network interface"
+      verification: |
+          ./chip-tool ethernetnetworkdiagnostics read overrun-count 1 1
+
+           CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0037 Attribute 0x0000_0006 DataVersion: 3872576452
+          [1649663948.738274][8142:8147] CHIP:TOO:   OverrunCount: 0
+      cluster: "LogCommands"
+      command: "UserPrompt"
+      PICS: PICS_USER_PROMPT
+      arguments:
+          values:
+              - name: "message"
+                value: "Please enter 'y' for success"
+              - name: "expectedValue"
+                value: "y"
 
     - label: "Read CarrierDetect attribute constraints"
       command: "readAttribute"
@@ -143,12 +183,25 @@ tests:
           constraints:
               type: bool
 
-    - label: "Read TimeSinceReset attribute"
-      disabled: true
-      command: "readAttribute"
-      attribute: "TimeSinceReset"
-      response:
-          value: 0
+    - label:
+          "Read CarrierDetect value from DUT and verify value indicates the
+          presence of carrier detect control signal on ethernet network
+          interface"
+      verification: |
+          ./chip-tool ethernetnetworkdiagnostics read carrier-detect 1 1
+          Verify the value of CarrierDetect is either bool or null
+
+          CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0037 Attribute 0x0000_0007 DataVersion: 3872576452
+          [1649663972.829304][8149:8154] CHIP:TOO:   CarrierDetect: null
+      cluster: "LogCommands"
+      command: "UserPrompt"
+      PICS: PICS_USER_PROMPT
+      arguments:
+          values:
+              - name: "message"
+                value: "Please enter 'y' for success"
+              - name: "expectedValue"
+                value: "y"
 
     - label: "Read TimeSinceReset attribute constraints"
       command: "readAttribute"
@@ -156,3 +209,22 @@ tests:
       response:
           constraints:
               type: uint64
+
+    - label:
+          "Read TimeSinceReset value from DUT and verify the value indicates the
+          duration of time, in minutes"
+      verification: |
+          ./chip-tool ethernetnetworkdiagnostics read  time-since-reset 1 1
+          Verify the value of TimeSinceReset is in range uint64
+
+          CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0037 Attribute 0x0000_0008 DataVersion: 3872576452
+          [1649664046.010810][8158:8163] CHIP:TOO:   TimeSinceReset: 5219
+      cluster: "LogCommands"
+      command: "UserPrompt"
+      PICS: PICS_USER_PROMPT
+      arguments:
+          values:
+              - name: "message"
+                value: "Please enter 'y' for success"
+              - name: "expectedValue"
+                value: "y"
