--- a/src/app/tests/suites/certification/Test_TC_WIFIDIAG_1_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_WIFIDIAG_1_1.yaml
@@ -36,16 +36,7 @@ tests:
           constraints:
               type: list
 
-    # issue: 16654 and 13645
-    # Various tests disabled for now until
-    # https://github.com/project-chip/connectedhomeip/pull/14755 is
-    # fixed and the SDK has the right types.
-    - label: "Reads SecurityType attribute from DUT"
-      command: "readAttribute"
-      attribute: "SecurityType"
-      response:
-          value: null
-
+    #issue #13645
     - label: "Reads SecurityType attribute constraints"
       command: "readAttribute"
       attribute: "SecurityType"
@@ -62,26 +53,12 @@ tests:
               minValue: 0
               maxValue: 5
 
-    - label: "Reads ChannelNumber attribute from DUT"
-      disabled: true
-      command: "readAttribute"
-      attribute: "ChannelNumber"
-      response:
-          value: null
-
     - label: "Reads ChannelNumber attribute constraints"
       command: "readAttribute"
       attribute: "ChannelNumber"
       response:
           constraints:
               type: uint16
-
-    - label: "Reads RSSI attribute from DUT"
-      disabled: true
-      command: "readAttribute"
-      attribute: "RSSI"
-      response:
-          value: null
 
     - label: "Reads RSSI attribute constraints"
       command: "readAttribute"
@@ -92,122 +69,63 @@ tests:
               minValue: -120
               maxValue: 0
 
-    - label: "Reads BeaconLostCount attribute from DUT"
-      disabled: true
-      command: "readAttribute"
-      attribute: "BeaconLostCount"
-      response:
-          value: 0
-
     - label: "Reads BeaconLostCount attribute constraints"
-      disabled: true
+      PICS: PICS_SKIP_SAMPLE_APP
       command: "readAttribute"
       attribute: "BeaconLostCount"
       response:
           constraints:
               type: uint32
-
-    - label: "Reads BeaconRxCount attribute from DUT"
-      disabled: true
-      command: "readAttribute"
-      attribute: "BeaconRxCount"
-      response:
-          value: 0
 
     - label: "Reads BeaconRxCount attribute constraints"
-      disabled: true
       command: "readAttribute"
       attribute: "BeaconRxCount"
       response:
           constraints:
               type: uint32
 
-    - label: "Reads PacketMulticastRxCount attribute from DUT"
-      disabled: true
-      command: "readAttribute"
-      attribute: "PacketMulticastRxCount"
-      response:
-          value: 0
-
     - label: "Reads PacketMulticastRxCount attribute constraints"
-      disabled: true
+      PICS: PICS_SKIP_SAMPLE_APP
       command: "readAttribute"
       attribute: "PacketMulticastRxCount"
       response:
           constraints:
               type: uint32
-
-    - label: "Reads PacketMulticastTxCount attribute from DUT"
-      disabled: true
-      command: "readAttribute"
-      attribute: "PacketMulticastTxCount"
-      response:
-          value: 0
 
     - label: "Reads PacketMulticastTxCount attribute constraints"
-      disabled: true
+      PICS: PICS_SKIP_SAMPLE_APP
       command: "readAttribute"
       attribute: "PacketMulticastTxCount"
       response:
           constraints:
               type: uint32
 
-    - label: "Reads PacketUnicastRxCount attribute from DUT"
-      disabled: true
-      command: "readAttribute"
-      attribute: "PacketUnicastRxCount"
-      response:
-          value: 0
-
     - label: "Reads PacketUnicastRxCount attribute constraints"
-      disabled: true
+      PICS: PICS_SKIP_SAMPLE_APP
       command: "readAttribute"
       attribute: "PacketUnicastRxCount"
       response:
           constraints:
               type: uint32
-
-    - label: "Reads PacketUnicastTxCount attribute from DUT"
-      disabled: true
-      command: "readAttribute"
-      attribute: "PacketUnicastTxCount"
-      response:
-          value: 0
 
     - label: "Reads PacketUnicastTxCount attribute constraints"
-      disabled: true
+      PICS: PICS_SKIP_SAMPLE_APP
       command: "readAttribute"
       attribute: "PacketUnicastTxCount"
       response:
           constraints:
               type: uint32
 
-    # Disabled because this fails on Linux because we have no Wi-Fi interface.
-    - label: "Reads CurrentMaxRate attribute from DUT"
-      disabled: true
-      command: "readAttribute"
-      attribute: "CurrentMaxRate"
-      response:
-          value: 0
-
-    # Disabled because this fails on Linux because we have no Wi-Fi interface.
     - label: "Reads CurrentMaxRate attribute constraints"
-      disabled: true
+      PICS: PICS_SKIP_SAMPLE_APP
       command: "readAttribute"
       attribute: "CurrentMaxRate"
       response:
           constraints:
               type: uint64
 
-    - label: "Reads OverrunCount attribute from DUT"
-      disabled: true
-      command: "readAttribute"
-      attribute: "OverrunCount"
-      response:
-          value: 0
-
     - label: "Reads OverrunCount attribute constraints"
-      disabled: true
+      PICS: PICS_SKIP_SAMPLE_APP
       command: "readAttribute"
       attribute: "OverrunCount"
       response:
