Add SessionSharedPtr, Change SessionHolder to a weak ref

--- a/src/transport/BUILD.gn
+++ b/src/transport/BUILD.gn
@@ -47,6 +47,7 @@ static_library("transport") {
     "SessionManager.h",
     "SessionMessageCounter.h",
     "SessionMessageDelegate.h",
+    "SessionSharedPtr.h",
     "TransportMgr.h",
     "TransportMgrBase.cpp",
     "TransportMgrBase.h",
