Added MW320 to all-clusters-app.
Signed-off-by: David Lin <yu-hao.lin@nxp.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -246,3 +246,6 @@
 	url = https://github.com/bouffalolab/bl_iot_sdk_matter.git
 	branch = bl602_release
 	platforms = bl602
+[submodule "third_party/nxp/mw320_sdk/repo"]
+	path = third_party/nxp/mw320_sdk/repo
+	url = https://github.com/nxptest/mw320_sdk
