--- a/src/platform/BUILD.gn
+++ b/src/platform/BUILD.gn
@@ -258,6 +258,11 @@ if (chip_device_platform != "none" && chip_device_platform != "external") {
       ]
       defines -=
           [ "CHIP_DEVICE_CONFIG_ENABLE_WPA=${chip_device_config_enable_wpa}" ]
+    } else if (chip_device_platform == "mw320") {
+      defines += [
+        "CHIP_DEVICE_LAYER_TARGET_MW320=1",
+        "CHIP_DEVICE_LAYER_TARGET=nxp/mw320",
+      ]
     }
   }
 } else if (chip_device_platform == "none") {
@@ -413,6 +418,8 @@ if (chip_device_platform != "none") {
       _platform_target = "fake"
     } else if (chip_device_platform == "cyw30739") {
       _platform_target = "CYW30739"
+    } else if (chip_device_platform == "mw320") {
+      _platform_target = "nxp/mw320"
     } else {
       assert(false, "Unknown chip_device_platform: ${chip_device_platform}")
     }
